Fix banner overflow

--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ html {
 
   .banner {
     max-height: 500px;
+    overflow: hidden;
   }
 
   .banner-content {
